[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "curatedapi_wm"
version = "0.9.2"
authors = [
  { name="William Mincy", email="me@williammincy.com" },
]
description = "This package provides a Python interface for the Curated API. With it, you can easily manage issues, links, and subscribers within publications."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/williammincy/CuratedAPI"
"Bug Tracker" = "https://github.com/williammincy/CuratedAPI/issues"